infrastructure/kube-prometheus/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitor-grafana
  namespace: kube-prometheus
  annotations: 
    kubernetes.io/ingress.class: traefik-local
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-cvsickle-com-tls
  routes:
    - match: Host(`grafana.local.cvsickle.com`)
      kind: Rule
      services:
        - name: monitor-grafana
          port: 80
    - match: Host(`graf.cvsickle.com`)
      kind: Rule
      services:
        - name: monitor-grafana
          port: 80
